# live-bootcamp-project

./: .env  .gitignore  Caddyfile  Cargo.toml  DEPLOYMENT.md  MODERN_UI_COMPLETE.md  README.md  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: Cargo.toml  build.rs
app-service/src/: main.rs
auth-service/: API_TEST_AUTOMATION.md  AUTH_FLOW_TEST.md  Cargo.toml  Dockerfile  INTEGRATION_GUIDE.md  POSTMAN_COLLECTION_GUIDE.md  PROJECT_NOTES.md  QUICK_TEST.md  README.md  auth-service.postman_collection.json  build.rs  cookies.txt  test_auth_flow.sh  test_reset_flow.py  verify_integration.sh
auth-service/.sqlx/: query-0a810d3570ea8f14798ba94772669d4bf257d74a53e48ea3fa35fbd078fa7a8f.json
auth-service/assets/: app.js  app.legacy.js  app_new.js  index.html  index_new.html  styles.css
auth-service/config/: default.toml  development.toml  production.toml  test.toml
auth-service/proto/: auth.proto
auth-service/proto/google/protobuf/: descriptor.proto
auth-service/proto/prost/: options.proto
auth-service/src/: api_doc.rs  auth_middleware.rs  config.rs  lib.rs  main.rs  recaptcha.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/grpc/: default_impls.rs  mod.rs
auth-service/src/routes/: account.rs  auth.rs  login.rs  logout.rs  mod.rs  refresh_token.rs  reset_password.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  two_fa_code_store_factory.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  auth_service.rs  constants.rs  mod.rs
auth-service/tests/api/: cors.rs  database_cleanup.rs  debug_test.rs  delete_account.rs  grpc_regression.rs  health_and_openapi.rs  helpers.rs  login.rs  logout.rs  main.rs  refresh_token.rs  routes.rs  signup.rs  ttl_expiration.rs  verify_2fa.rs  verify_token.rs
auth-service/tests/ui/: package-lock.json  package.json  playwright.config.ts  results.xml
auth-service/tests/ui/playwright-report/: index.html
auth-service/tests/ui/test-results/: .last-run.json
auth-service/tests/ui/test-results/auth-Authentication-UI-Acc-994ec-ce-errors-to-screen-readers-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-Acc-aa641-have-proper-contrast-ratios-chromium/: video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-For-6162e-ld-validate-password-length-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-For-799c3-ld-validate-2FA-code-format-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-Loa-212fd-ng-state-on-form-submission-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-Nav-760a8--login-from-forgot-password-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-Nav-f1502-te-between-login-and-signup-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-Per-93863-hould-not-have-memory-leaks-chromium/: video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-Use-18fa9-handle-forgot-password-flow-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-Use-e6de1-dle-signup-with-2FA-enabled-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-User-Flows-should-handle-login-flow-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-User-Flows-should-handle-logout-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-User-Flows-should-handle-signup-flow-chromium/: error-context.md  video.webm
auth-service/tests/ui/test-results/auth-Authentication-UI-Vis-131c6-n-should-match-error-states-chromium/: video.webm
auth-service/tests/ui/tests/: auth.spec.ts  debug.spec.ts  demo.spec.ts  final-demo.spec.ts  integration.spec.ts  live-backend.spec.ts  mock-api.spec.ts
auth-service/tests/unit/: mock_user_store.rs  signup_handler.rs
auth-service/ui-tests/: delete-account.spec.ts  package-lock.json  package.json  playwright.config.js
