[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.7.4", features = ["cookie"] }
tower-http = { version = "0.4.4", features = ["fs"] }
hyper = "0.14.27"
http = "0.2.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.12.1"
