[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
# Optional metadata for clarity and best practice
authors = ["Igor Petrov ihorpetroff@gmail.com"]
description = "Authentication microservice for live bootcamp project."
repository = "https://github.com/ipcasj/live-bootcamp-project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4", features = ["axum_extras"] }

axum = "0.8.4"
async-trait = "0.1.78"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
goose = "0.18"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

