[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
# Optional metadata for clarity and best practice
authors = ["Igor Petrov ihorpetroff@gmail.com"]
description = "Authentication microservice for live bootcamp project."
repository = "https://github.com/ipcasj/live-bootcamp-project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
validator = { version = "0.20.0", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
axum = "0.8.4"
async-trait = "0.1.78"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
tower-http = { version = "0.6.6", features = ["fs", "trace", "catch-panic", "cors"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
axum-extra = { version = "0.10.1", features = ["cookie"] }
jsonwebtoken = "9.2.0"
hyper = "0.14"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
goose = "0.18"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
thiserror = "2.0.16"
anyhow = "1.0"
time = "0.3"

[dev-dependencies]
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
tokio-stream = { version = "0.1", features = ["net"] }


[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"

