[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
# Optional metadata for clarity and best practice
authors = ["Igor Petrov ihorpetroff@gmail.com"]
description = "Authentication microservice for live bootcamp project."
repository = "https://github.com/ipcasj/live-bootcamp-project"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tower = "0.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
validator = { version = "0.20.0", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
axum = "0.6.20"
async-trait = "0.1.78"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11"
tower-http = { version = "0.4.4", features = ["fs", "trace", "catch-panic", "cors"] }
hyper = "0.14.27"
http = "0.2.9"
axum-extra = { version = "0.7.4", features = ["cookie"] }
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
goose = "0.18"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.16"
anyhow = "1.0"
time = "0.3"
rand = "0.8.5"
argon2 = { version = "0.5.3", features = ["std"] }
rand_core = "0.9.3"
prost = "0.12.6"
once_cell = "1.21.3"
dotenvy = "0.15"
config = "0.14.0"
futures = "0.3.31"
# SQLx for PostgreSQL database operations
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
# Redis for caching and temporary data storage
redis = { version = "0.25.2", features = ["tokio-comp", "connection-manager"] }
bb8-redis = "0.15.0"
bb8 = "0.8.5"

[dev-dependencies]
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
tokio-stream = { version = "0.1", features = ["net"] }




[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12.6"
prost-types = "0.12.6"

